[package]
name = "nannou-fun"
version = "0.1.0"
authors = ["Mark Wong-VanHaren <markwvh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"

[[example]]
# cargo run --example simple_ui --release
name = "simple_ui"
path = "src/simple_ui.rs"